css/main.css
/* ... */
h3, h4 {
  font-size: 1em;
  padding: 10px 0;
}

h5 {
  font-size: 0.625em;
  text-transform: uppercase;
  padding-bottom: 6px;
}

/* Header area */

.main-header {
  width: 100%;
  overflow-x: hidden;
  margin: auto;
}

.header-wrapper {
  width: 100%;
}

.logo {
  width: 100%;
  background-color: #DDDDDD;
}

.logo img {
  width: 100%;
}

nav {
  width: 96%;
  padding: 0 2%;
  background-color: #DDDDDD;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav ul li{
  display: inline-block;
  text-align: center;
  width: 100%;
  padding: 20px 0;
  border-bottom: 1px solid;
  border-color: #cfcacb;
}
nav ul li a {
  font-weight: bold;
  color: #222222;
}

.nav-selected {
  color: #ff1256;
}

/* Main area */

main {
  width: 96%;
  padding: 0 2%;
  margin: auto;
  clear: both;
}

.hero-area {
  width: 100%;
  padding-top: 25px;
  padding-bottom: 15px;
  border-bottom: 1px solid;
  border-color: #cfcacb;
}

.top-img {
  margin-bottom: 15px;
}

.top-img img {
  width: 100%;
}

.sidebar-newsletter {
  width: 100%;
  padding-bottom: 20px;
  border-bottom: 1px solid;
  border-color: #cccccc;
}

.signup-mail {
  width: 100%;
  border: 1px solid;
  border-color: #e6e6e6;
  height: 35px;
  margin-bottom: 5px;
}

.signup-btn {
  width: 100%;
  background-color: #ff1256;
  height: 35px;
  border-top: 0px;
  border-left: 0px;
  border-color: #d19aaa;
  font-size: 1.125em;
  font-weight: 700;
  text-transform: uppercase;
  color: #FFFFFF;
}

.sidebar-about-us {
  display: none;
}

.sidebar-faqs {
  display: none;
}

.feed {
  width: 100%;
}

#news-header {
  padding-bottom: 0;
}

.feed-item {
  width: 100%;
  overflow: auto;
  padding-top: 15px;
  padding-bottom: 20px;
  border-bottom: 1px solid;
  border-color: #CCCCCC;
}

.feed-img {
  width: 42%;
  float: left;
  margin: 0 10% 0 0;
  border: 2px solid;
  border-color: #cfcacb;
}

.feed-img img {
  width: 100%;
}

.feed-text {
  width: 45%;
  float: left;
}

.feed-text h4 {
  padding: 0;
}

.feed-body {
  display: none;
}

/* Footer area */

footer {
  width: 100%;
  margin: auto;
  padding-top: 15px;
}

.footer-logo {
  width: 47.5%;
  margin: auto;
}

.footer-logo img {
  width: 100%;
}


/* Subpages */

/* About Us */

.contact-summary {
  padding: 30px 0;
}

.contact-info {
  width: 100%;
}

.contact-info ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.contact-info ul li {
  display: inline-block;
  font-size: 1em;
  line-height: 1.125em;
  padding-bottom: 15px;
}

.strong {
  font-weight: 700;
  vertical-align: top;
}

.map {
  position: relative;
  width: 98%;
  padding-bottom: 75%;
  /*height: 200px;*/
  border: 2px solid;
  border-color: #cfcacb;
}

.map iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.mission {
  width: 100%;
}

.mission p {
  line-height: 1.25em;
  padding-bottom: 1.25em;
}

.team {
  width: 100%;
  border-bottom: 1px solid;
  border-color: #cfcacb;
  overflow: auto;
}

.team-member {
  padding-bottom: 15px;
  overflow: auto;
}

.team-img {
  width: 43%;
  float: left;
  margin: 0 10% 0 0;
  border: 2px solid;
  border-color: #cfcacb;
}

.team-img img {
  width: 100%;
}

.team-info {
  width: 45%;
  float: left;
}

.team-name {
  font-weight: 700;
  line-height: 1.125em;
}

.team-title {
  line-height: 1.125em;
}

.team-description {
  display: none;
}

/* FAQs */

.faq-title {
  width: 100%;
  padding-top: 30px;
}

.faq-title h2 {
  padding-bottom: 0;
}

.faq-question {
  width: 100%;
  border-bottom: 1px solid;
  border-color: #cccccc;
}

.question-title {
  font-weight: normal;
  line-height: 1.125em;
  padding-top: 20px;
}

.question-contact {
  padding: 20px 0;
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}
/* ... */

